Changes for smaller screens: 1) make sure action buttons are still available. 2.) fix z-index issues with sidebar and main content when scrolling.

--- a/client/app/styles/override.less
+++ b/client/app/styles/override.less
@@ -203,9 +203,17 @@ http://ryanfait.com/
     z-index: @zindexFixedNavbar;
     
     .actions {
-        position: absolute;
-        right: 0;
+        position: fixed;
+        right: @gridGutterWidth;
         top: 20px;
+        
+        @newWidth: (@gridRowWidth + @gridGutterWidth);
+        
+        @media all and (min-width: @newWidth) {
+            position: absolute;
+            right: 0; 
+        }
+        
     }
 }
 
